--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,7 +22,17 @@
   $header-color: #111111;
   $link-font-size: 24px;
   $soft-gray: #999999;
+  $link-color: #517a9e;
 
+  .right{
+    float: right;
+  }
+
+  .left{
+    float: left;
+  }
+
+  height: 100%;
   text-align: center;
   font-family: $font;
   margin: 5em;
@@ -32,9 +42,24 @@
     margin: 6em 0em;
   }
 
+  .bold{
+    font-weight: bold;
+  }
+
+  .italic{
+    font-style: italic;
+  }
+
   h1{
     font-size: 28px;
     font-weight: 200;
+    a{
+      text-decoration: none;
+      color: $header-color;
+      &:hover{
+        color: lighten($header-color, 20%);
+      }
+    }
   }
 
   .navigation{
@@ -90,6 +115,73 @@
             cursor: pointer;
           }
         }
+      }
+    }
+  }
+
+  #resume{
+    $font-size: 18px;
+
+    border: 1px solid #000;
+    height: 100%;
+    width: 80%;
+    margin: 3em auto;
+    box-shadow:  2px 2px #ccc;
+
+    .header{
+      width: 80%;
+      margin-left: auto;
+      margin-right: auto;
+      border-bottom: 1px solid $soft-gray;
+    }
+
+    .content{
+      margin-left: auto;
+      margin-right: auto;
+      text-align: left;
+
+      p{
+        margin: 0;
+        font-size: 16px;
+      }
+
+      .container{
+        margin: 0 3em;
+      }
+
+      .title{
+        margin-top: 1em;
+        .bold{
+          font-size: $font-size;
+        }
+      }
+
+      a{
+        color: $link-color;
+        text-decoration: none;
+        &:hover{
+          color: $header-color;
+          cursor: pointer;
+        }
+      }
+
+      .proficiencies li{
+        width: 100%;
+        // display: inline;
+      }
+
+      ul{
+        margin-top: 0;
+        li{
+          font-size: $font-size;
+        }
+      }
+
+      h2{
+        text-decoration: underline;
+        font-weight: 550;
+        font-size: 20px;
+        margin: 1em 0 0 0 ;
       }
     }
   }
