--- a/app/views/pages/resume.html.haml
+++ b/app/views/pages/resume.html.haml
@@ -1,4 +1,5 @@
 #resume
+  = link_to 'Download PDF', '/luke_pfeiffer_resume.pdf', target: '_blank'
   .header
     %p lukerpfeiffer@ufl.edu
     %p https://github.com/lukepfeiffer
@@ -43,8 +44,8 @@
           %li Configured Postgres database
         %p.title
           %span.bold Web Application
-          %span.italic,
-          %span.right.bold= link_to 'https://my-first-year-florida.herokuapp.com/'
+          %span.italic, MyFirstYearFlorida
+          %span.right.bold= link_to 'https://my-first-year-florida.herokuapp.com/', 'https://my-first-year-florida.herokuapp.com/', target: '_blank'
         %ul
           %li Developed quicker user interactions using Ajax requests and Jquery
           %li Designed the user interface
