--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,7 +17,7 @@
       .actions
         = link_to 'About', root_path
         = link_to 'Blog', root_path
-        = link_to 'Projects', root_path
+        = link_to 'Projects', projects_path
         = link_to 'Contact', contact_path
         = link_to 'Resume', resume_path
 
