--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,7 +15,7 @@
     %nav.navigation
       %h1= link_to 'Luke Pfeiffer', root_path
       .actions
-        = link_to 'About', root_path
+        = link_to 'Home', root_path
         = link_to 'Blog', root_path
         = link_to 'Projects', projects_path
         = link_to 'Contact', contact_path
