--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -119,6 +119,27 @@
     }
   }
 
+  #home{
+    margin-top: 4em;
+    text-align: center;
+    padding-bottom: 4em;
+    .content{
+      p{
+        font-weight: 300;
+        font-size: 18px;
+        line-height: 200%;
+        margin-right: auto;
+        margin-left: auto;
+        width: 60%;
+        text-align: left;
+      }
+      .profile-picture{
+        img{
+        }
+      }
+    }
+  }
+
   #contact{
     width: 60%;
     margin: 5em auto 5em auto;
