--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -20,6 +20,7 @@
         = link_to 'Projects', projects_path
         = link_to 'Contact', contact_path
         = link_to 'Resume', resume_path
+        = link_to 'Sign out', sign_out_path if current_user.present?
 
     = yield
 
