--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -119,6 +119,51 @@
     }
   }
 
+  .form{
+    text-align: left;
+
+    fieldset{
+      border: none;
+    }
+
+    dd{
+      margin: 1em 0;
+    }
+
+    input[type=text], input[type=password]{
+      padding: 10px;
+      width: 50%;
+      height: 2em;
+      font-size: 18px;
+      border-radius: 4px;
+    }
+
+    textarea{
+      line-height: 150%;
+      padding: 10px;
+      font-size: 18px;
+      width: 50%;
+      height: 15em;
+      border-radius: 4px;
+    }
+
+    input[type=submit]{
+      padding: 0 10px;
+      font-size: 18px;
+      height: 2em;
+      border-radius: 18px;
+      color: #28AADC;
+      border: 1px solid #28AADC;
+      background: #fff;
+      font-weight: bold;
+      &:hover{
+        color: darken(#28AADC, 20%);
+        border: 1px solid darken(#28AADC, 20%);
+      }
+    }
+
+  }
+
   #home{
     margin-top: 4em;
     text-align: center;
@@ -135,6 +180,29 @@
       }
       .profile-picture{
         img{
+        }
+      }
+    }
+  }
+
+  #posts{
+    width: 60%;
+    margin: 5em auto 5em auto;
+    .content{
+      .container{
+        font-size: 17px;
+        border-bottom: 1px solid $soft-gray;
+        padding: 0 0 2em 0;
+        p{
+          text-align: left;
+        }
+
+        .italic{
+          color: $link-color;
+        }
+
+        .body{
+          line-height: 150%;
         }
       }
     }
