Create blog post

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -193,6 +193,10 @@
         font-size: 17px;
         border-bottom: 1px solid $soft-gray;
         padding: 0 0 2em 0;
+
+        img{
+          width: 100%;
+        }
         p{
           text-align: left;
         }
