Admin updates and archives posts

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,6 +23,8 @@
   $link-font-size: 24px;
   $soft-gray: #999999;
   $link-color: #517a9e;
+  $danger-color: #FA3434;
+  $warning-color: #FF9308;
 
   .right{
     float: right;
@@ -49,6 +51,29 @@
   .italic{
     font-style: italic;
   }
+
+  .pagination{
+    $background-color: #D7DEF0;
+    $font-color: #4D4D4D;
+    padding-top: 1em;
+    text-align: center;
+    margin: 0 0 30px 0;
+    a, .previous_page, .next_page, em{
+      background-color: $background-color;
+      text-decoration: none;
+      color: $font-color;
+      padding: 10px;
+      border-radius: 4px;
+      &:hover{
+        background-color: darken($background-color, 8%);
+      }
+    }
+
+    em, .disabled{
+      background-color: darken($background-color, 10%);
+    }
+  }
+
 
   h1{
     font-size: 28px;
@@ -203,6 +228,40 @@
 
         .italic{
           color: $link-color;
+        }
+
+        .admin-actions{
+          a{
+            width: 100%;
+            margin: 0;
+            text-decoration: none;
+            margin: 5px 10px;
+            padding: 8px;
+            border-radius: 29px;
+            color: $soft-gray;
+            font-size: 14px;
+            font-weight: 400;
+            margin-right: 5px;
+          }
+
+          .danger{
+            color: $danger-color;
+            border: 1px solid $danger-color;
+            &:hover{
+              color: darken($danger-color, 10%);
+              border: 1px solid darken($danger-color, 10%);
+              background-color: darken(#fff, 8%);
+            }
+          }
+          .warning{
+            color: $warning-color;
+            border: 1px solid $warning-color;
+            &:hover{
+              color: darken($warning-color, 10%);
+              border: 1px solid darken($warning-color, 10%);
+              background-color: darken(#fff, 8%);
+            }
+          }
         }
 
         .body{
