--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -2,4 +2,5 @@
   .content
     .profile-picture
       = image_tag 'profile_pic.jpg'
-    %p Hello all, my name is Luke Pfeiffer. I have been coding web applications for over three years now. I work for Fresh Start Software part time as a junior developer as well as doing some free lance work on the side. I attend the University of Florida as a first year student, studying computer engineering. If I am not coding, I like to go to skate park and skateboard. I also enjoy making edits of me doing some skateboard tricks.
+
+    %p Hello all, my name is Luke Pfeiffer. I have been devoloping web applications for over three years now. I currently work for Fresh Start Software as a junior devopler as a well as doing some free lance work on the side. I just started the "college life" this fall at the University of Florida, studying computer engineering. If I am not coding you can find me at the local skatepark! I've also made a couple edits of some of my tricks.
