Add DESC project to project page

--- a/app/views/pages/projects.html.haml
+++ b/app/views/pages/projects.html.haml
@@ -7,7 +7,7 @@
           %span.bold Target Zero
           %span= link_to 'https://www.target-zero.org', 'https://www.target-zero.org', target: '_blank'
       .left= image_tag 'target_zero.png'
-      %p.details This is a web app that I developed software for. I wrote both front end and back end code that enabled employees of this nonprofit organization to edit the pages as needed. Also implemented functionality to add new fields to existing models.
+      %p.details This is a web app that I developed software for as a part of the Fresh Start Software team. I wrote both front end and back end code that enabled employees of this nonprofit organization to edit the pages as needed. Also implemented functionality to add new fields to existing models.
 
     .project#smart-pharmacy
       .sub-header
@@ -16,3 +16,12 @@
           %span= link_to 'https://smartpharmacy.com/', 'https://smartpharmacy.com/', target: '_blank'
       .left= image_tag 'smart_pharmacy.png'
       %p.details On this project I worked alongside the Fresh Start Software team to create a better user experience for the employees. Smart Pharmacy had an existing internal web application for it's employees and as a team we implemented new functionality using Agile Sprint Development.
+
+    .project
+      .sub-header
+        %p
+          %span.bold DESC of Jacksonville
+          %span= link_to 'http://descjax.org/', 'http://descjax.org/', target: '_blank'
+      .left= image_tag 'desc.svg'
+      %p.details On this solo project, I volunteered for this nonprofit organization by developing software. They sought someone to add functionality to their employee side web application. Some of the features included a method that calculates holidays throughout the year including Labor Day and Thanksgiving and adjusting schedules accordingly as well as adding new tracking records to those who recieved services.
+
