--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -384,7 +384,7 @@
         color: $link-color;
         text-decoration: none;
         &:hover{
-          color: $dark-gray;
+          color: darken($link-color, 10%);
           cursor: pointer;
         }
       }
