--- a/app/views/pages/resume.html.haml
+++ b/app/views/pages/resume.html.haml
@@ -34,6 +34,16 @@
           %li Determined specs for the project to ensure a correct build and build client confidence
           %li Developed photo gallery, both front end and back end, from scratch
           %li Maintained a healthy relationship with client
+
+        %p.title
+          %span.bold Web and Development Chair
+          %span.italic, Association of Computer Engineers
+          %span.right December 2016 - Present
+        %ul
+          %li Organize and present workshops
+          %li Update and add functionality to the organizations website
+          %li Deployed website to archive all workshops for the organization
+
       .category
         %h2 Development Experience
         %p.title
@@ -41,6 +51,7 @@
           %span.italic, Lukerpfeiffer
         %ul
           %li Front end and back end development from scratch
+          %li Create design for the application
           %li Configured Postgres database
         %p.title
           %span.bold Web Application
@@ -50,6 +61,21 @@
           %li Developed quicker user interactions using Ajax requests and Jquery
           %li Designed the user interface
           %li Configured Postgres Database
+        %p.title
+          %span.bold Workshop Archive
+          %span.italic, aceworkshops
+          %span.right.bold= link_to 'https://aceworkshops.herokuapp.com', 'https://aceworkshops.herokuapp.com', target: '_blank'
+        %ul
+          %li Front end and Back end development from scratch
+          %li Designed the user interface
+          %li Configured postgres database
+        %p.title
+          %span.bold Java Programs
+          %span.italic, independent development
+          %span.right.bold= link_to 'https://github.com/lukepfeiffer/java_programs', 'https://github.com/lukepfeiffer/java_programs', target: '_blank'
+        %ul
+          %li Learned Java syntax and design patterns
+          %li Developed small games to apply real world examples to data structures
       .category
         %h2 Professional Education
         %p.title
@@ -70,16 +96,16 @@
       .category
         %h2 Programming Proficiencies
         %ul.proficiencies
-          %li Ruby on Rails
-          %li Ruby
-          %li Java (Novice)
-          %li CSS
-          %li HTML5
-          %li Haml
-          %li Javascript
+          %li Git Version Management
+          %li Java
           %li Jquery
+          %li Javascript
           %li Cucumber
           %li Rspec
-          %li Linux Command Line
+          %li Ruby
+          %li Ruby on Rails
+          %li HTML5
+          %li Haml
+          %li CSS
           %li Vim Text Editor
-          %li Github Version Management
+          %li Linux Command Line
