--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -319,7 +319,7 @@
           }
         }
 
-        .sub-header p{
+        .sub-header {
           a{
             color: $link-color;
             text-decoration: none;
