--- a/app/views/pages/projects.html.haml
+++ b/app/views/pages/projects.html.haml
@@ -31,4 +31,4 @@
           .bold Destyn Patera
           = link_to 'destynpatera.com', 'https://destynpatera.herokuapp.com', target: '_blank'
       .left.destyn= image_tag 'main_logo.png'
-      %p.details.destyn On this project, a photographer needed a website to display his photos and have a central place for contact information. This was one of the more fun projects because it involved it required both visual appeal and functional appeal for the photographer.
+      %p.details.destyn On this project, a photographer needed a website to display his photos and have a central place for contact information. This was one of the more fun projects because it required both visual appeal and functional appeal for the photographer.
