--- a/app/views/pages/projects.html.haml
+++ b/app/views/pages/projects.html.haml
@@ -6,7 +6,7 @@
         %p
           .bold Target Zero
           = link_to 'target-zero.org', 'https://www.target-zero.org', target: '_blank'
-      .left= image_tag 'target_zero.png'
+      .image= image_tag 'target_zero.png'
       %p.details This is a web app that I developed software for as a part of the Fresh Start Software team. I wrote both front end and back end code that enabled employees of this nonprofit organization to edit the pages as needed. Also implemented functionality to add new fields to existing models.
 
     .project#smart-pharmacy
@@ -14,7 +14,7 @@
         %p
           .bold Smart Pharmacy
           = link_to 'smartpharmacy.com', 'https://smartpharmacy.com/', target: '_blank'
-      .left= image_tag 'smart_pharmacy.png'
+      .image= image_tag 'smart_pharmacy.png'
       %p.details On this project I worked alongside the Fresh Start Software team to create a better user experience for the employees. Smart Pharmacy had an existing internal web application for it's employees and as a team we implemented new functionality using Agile Sprint Development.
 
     .project
@@ -22,7 +22,7 @@
         %p
           .bold DESC of Jacksonville
           = link_to 'descjax.org', 'https://descjax.org/', target: '_blank'
-      .left= image_tag 'desc.svg'
+      .image= image_tag 'desc.svg'
       %p.details On this solo project, I volunteered for this nonprofit organization by developing software. They sought someone to add functionality to their employee side web application. Some of the features included a method that calculates holidays throughout the year including Labor Day and Thanksgiving and adjusting schedules accordingly as well as adding new tracking records to those who recieved services.
 
     .project
@@ -30,5 +30,5 @@
         %p
           .bold Destyn Patera
           = link_to 'destynpatera.com', 'https://destynpatera.herokuapp.com', target: '_blank'
-      .left.destyn= image_tag 'main_logo.png'
+      .image.destyn= image_tag 'main_logo.png'
       %p.details.destyn On this project, a photographer needed a website to display his photos and have a central place for contact information. This was one of the more fun projects because it required both visual appeal and functional appeal for the photographer.
