--- a/app/views/pages/resume.html.haml
+++ b/app/views/pages/resume.html.haml
@@ -84,9 +84,11 @@
           %li Java
           %li Jquery
           %li Javascript
+          %li Ruby on Rails
           %li Ruby
-          %li HTML5
+          %li HTML
           %li Haml
           %li CSS
+          %li Reactjs (novice)
           %li Vim Text Editor
           %li Linux Command Line
