--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,7 @@
 #main{
   $font: "Varela Round", sans-serif;
   $dark-gray: #111111;
+  $text-gray: #9b9b9b;
   $link-font-size: 24px;
   $soft-gray: #999999;
   $link-color: #517a9e;
@@ -90,6 +91,7 @@
   .navigation{
     text-transform: uppercase;
     color: $dark-gray;
+    margin-bottom: 2em;
     .actions{
       a{
         margin: 0;
@@ -101,7 +103,7 @@
         font-weight: 400;
         &:hover{
           color: $dark-gray;
-          border-bottom: 1px solid $soft-gray;
+          border-bottom: 1px solid $dark-gray;
         }
       }
     }
@@ -306,6 +308,7 @@
     .content{
       h1{
         border-bottom: 1px solid $soft-gray;
+        color: $dark-gray;
       }
 
       .project{
@@ -322,6 +325,10 @@
 
         .details{
           display: inline-block;
+          color: $text-gray;
+          font-size: 16px;
+          position: relative;
+          top: -40px;
         }
 
         .sub-header {
@@ -349,63 +356,78 @@
   }
 
   #resume{
-    $font-size: 18px;
-
-    border: 1px solid #000;
-    height: 100%;
     width: 80%;
-    margin: 3em auto;
-    box-shadow:  2px 2px #ccc;
-
-    .header{
-      width: 80%;
-      margin-left: auto;
-      margin-right: auto;
-      border-bottom: 1px solid $soft-gray;
-    }
+    margin-left: auto;
+    margin-right: auto;
 
     .content{
-      margin-left: auto;
-      margin-right: auto;
       text-align: left;
+    }
 
-      p{
-        margin: 0;
-        font-size: 16px;
-      }
+    h1{
+      font-size: 20px;
+    }
 
-      .container{
-        margin: 0 3em;
-      }
-
-      .title{
-        margin-top: 1em;
-        .bold{
-          font-size: $font-size;
-        }
-      }
-
+    .header{
       a{
         color: $link-color;
         text-decoration: none;
-        &:hover{
-          color: darken($link-color, 10%);
-          cursor: pointer;
+      }
+    }
+
+    .category{
+      padding: 0;
+      margin: 0;
+      list-style: none;
+
+      display: -webkit-box;
+      display: -moz-box;
+      display: -ms-flexbox;
+      display: -webkit-flex;
+      display: flex;
+
+      -webkit-flex-flow: row wrap;
+      justify-content: flex-start;
+
+      .subheader{
+        font-size: 18px;
+        margin-bottom: 5px;
+      }
+
+      .details{
+        font-size: 14px;
+        color: $text-gray;
+        font-style: italic;
+        a{
+          color: $link-color;
+          text-decoration: none;
         }
       }
 
-      ul{
-        margin-top: 0;
-        li{
-          font-size: $font-size;
-        }
-      }
+      .sub{
+        padding: 2px 1em 1em 1em;
+        border: 1px solid lighten(#ccc, 5%);
+        border-radius: 3px;
+        margin-bottom: 0.5em;
+        margin-right: 0.5em;
+        ul{
+          padding: 0;
+          margin: 0;
+          list-style: none;
 
-      h2{
-        text-decoration: underline;
-        font-weight: 550;
-        font-size: 20px;
-        margin: 1em 0 0 0 ;
+          display: -webkit-box;
+          display: -moz-box;
+          display: -ms-flexbox;
+          display: -webkit-flex;
+          display: flex;
+
+          -webkit-flex-flow: row wrap;
+          justify-content: flex-start;
+          li{
+            color: #333;
+            margin-right: 5px;
+          }
+        }
       }
     }
   }
