--- a/app/views/pages/contact.html.haml
+++ b/app/views/pages/contact.html.haml
@@ -3,7 +3,7 @@
     %h1 Email:
     %p
       If you'd like to get in touch, email me at:
-      %span.details lukerpfeiffer@ufl.edu
+      %span.details= link_to 'lukerpfeiffer@ufl.edu', 'mailto:lukerpfeiffer@ufl.edu'
   .secondary-contact
     %p.subheader
       %span.bold Skype:
