--- a/app/views/pages/resume.html.haml
+++ b/app/views/pages/resume.html.haml
@@ -3,7 +3,7 @@
     %p
       = link_to 'lukerpfeiffer@ufl.edu', 'mailto:lukerpfeiffer@ufl.edu'
     %p
-      = link_to 'https://github.com/lukepfeiffer', 'https://github.com/lukepfeiffer'
+      = link_to 'https://github.com/lukepfeiffer', 'https://github.com/lukepfeiffer', target: '_blank'
   = link_to 'Download Resume', '/luke_pfeiffer_resume.pdf', target: '_blank'
 
   .content
