--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,7 +19,7 @@
       .actions
         = link_to 'Resume', resume_path
         = link_to 'Contact', contact_path
-        = link_to 'Blog', posts_path
+        -# = link_to 'Blog', posts_path
         = link_to 'Sign out', sign_out_path, method: :delete if current_user.present?
 
     = yield
